[package]
name = "halo-vesting"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw20 = "0.14.0"
cosmwasm-std = { version = "1.0.0", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
cw-storage-plus = "0.14.0"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
halo-token = { path = "../../../packages/halo_token" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0", default-features = false  }
