[package]
name = "ve-token"
version = "1.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
license = "Apache-2.0"
description = "A ve token for Glow"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core", feature=["utils"]}
cw20 = "0.13.2"
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw900 = { path = "../../../packages/cw900" }
schemars = "0.8.10"
serde = "1.0.137"
thiserror = "1.0.24"
hex = "0.4"
cw-storage-plus = "0.13.2"
cosmwasm-schema = "1.0.0"
