[package]
name = "subdao-token"
version = "2.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = "0.13.4"
cw-controllers = "0.13.4"  
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
cosmwasm-std = "1.0.0"
schemars = "0.8.10"
serde = "1.0.137"
thiserror = "1.0.24"

[dev-dependencies]
cosmwasm-schema = "1.0.0"