[package]
name = "fee-distributor"
version = "1.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
license = "Apache-2.0"
description = "A fee distributor contract for Angel Protocol - allows for HALO to be distributed among veHALO holders proportionally to their veHALO balances"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }

cw20 = "0.13.4"
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-asset = "2.0.0"
cw-storage-plus = "0.13.4"
schemars = "0.8.10"
serde = "1.0.137"
thiserror = "1.0.24"
terraswap = "2.6.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }