[package]
name = "loopswap-vault"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
cosmwasm-std = { version = "1.0.0",  features = ["abort"] } 
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
schemars = "0.8.1"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0.68"
thiserror = "1.0.24"
terraswap = "2.8.0"
cw-controllers = "0.13.4"

[dev-dependencies]
cosmwasm-storage = "1.0.0"
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
