[package]
name = "fundraising"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
description = "A fundraising contract for Angel Protocol endowments - allows commited tokens to be distributed to those who commit to the fundraising campaign"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "fundraising"

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
angel-core = { path = "../../../packages/angel_core" }

cw2 = "1.1.0"
cw20 = "1.1.0"
cosmwasm-std = "1.3.3"
cosmwasm-schema = "1.3.3"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.0"

schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.16.2"
